# call-analytics

./: pyproject.toml
call_analytics/: __main__.py
front/: package-lock.json  package.json  tailwind.config.ts
front/app/: globals.css  layout.tsx  page.tsx
front/components/: component.tsx
front/components/ui/: card.tsx
front/pages/: success.jsx
front/pages/api/: upload.js
